--- a/lecture5/transforms/index.html
+++ b/lecture5/transforms/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="div">abcd</div>
+    <!-- <div class="div">abcd</div> -->
+    <!-- 3 - d transforms -->
+      <div class="static"></div>
+      <div class="translated"></div>
+      <div class="scaled"></div>
 </body>
 </html>
